Fix link in template

--- a/src/main/resources/templates/activationMail.html
+++ b/src/main/resources/templates/activationMail.html
@@ -6,16 +6,16 @@
   <link rel="shortcut icon" th:href="@{|${mailData.serverUrl}/favicon.ico|}" />
 </head>
 <body>
-<p th:text="#{'Hi ' + ${mailData.firstName}} + ','">Hi,</p>
-<p>Dein Konto für den Stauseepokal wurde erstellt, bitte klicke auf den folgenden Link, um es zu aktivieren:</p>
+<p th:text="'Hi ' + ${mailData.firstName} + ','">Hi,</p>
+<p>dein Konto für den Stauseepokal wurde erstellt, bitte klicke auf den folgenden Link, um es zu aktivieren:</p>
 <p>
-  <a th:with="url=(@{|${mailData.serverUrl}/users/activate?key=${mailData.key}|})" th:href="${url}"
+  <a th:with="url=(@{|${mailData.serverUrl}account/activate?key=${mailData.key}|})" th:href="${url}"
      th:text="${url}">Jetzt aktivieren</a>
 </p>
 <p>
   <span>Sportliche Grüße</span>
   <br/>
-  <em>Dein ATV Stauseepokal Team</em>
+  <span>Dein ATV Stauseepokal Team</span>
 </p>
 </body>
 </html>
